--- a/index.html
+++ b/index.html
@@ -115,23 +115,23 @@
                         <div class="certificates">
                             <ul>
                                 <li>
-                                    <span class="date">date</span>
-                                    <p>degree</p>
+                                    <span class="date">2024</span>
+                                    <p>IS degree</p>
                                     <i class="fa-solid fa-certificate"></i>
                                 </li>
                                 <li>
-                                    <span class="date">date</span>
-                                    <p>degree</p>
+                                    <span class="date">2022</span>
+                                    <p>advanced full-stack diploma (MERN)</p>
                                     <i class="fa-solid fa-certificate"></i>
                                 </li>
                                 <li>
-                                    <span class="date">date</span>
-                                    <p>degree</p>
+                                    <span class="date">2023</span>
+                                    <p>Flutter course</p>
                                     <i class="fa-solid fa-certificate"></i>
                                 </li>
                                 <li>
-                                    <span class="date">date</span>
-                                    <p>degree</p>
+                                    <span class="date">2024</span>
+                                    <p>ITI diploma  (preparing)</p>
                                     <i class="fa-solid fa-certificate"></i>
                                 </li>
                             </ul>
@@ -142,20 +142,20 @@
                         <div class="experiences">
                             <ul>
                                 <li>
-                                    <span class="date">date</span>
-                                    <p>experience</p>
+                                    <span class="date">Start of 2022</span>
+                                    <p>CRUD system, built a system handles the stores requirements and ensure to store the data and doing some statistics to help the user mentaining daily operations</p>
                                 </li>
                                 <li>
-                                    <span class="date">date</span>
-                                    <p>experience</p>
+                                    <span class="date">Start of 2023</span>
+                                    <p>Freelancer in web development, built many web apps</p>
                                 </li>
                                 <li>
-                                    <span class="date">date</span>
-                                    <p>experience</p>
+                                    <span class="date">End of 2023</span>
+                                    <p>Freelancer as mobile developer, built many mobile apps</p>
                                 </li>
                                 <li>
-                                    <span class="date">date</span>
-                                    <p>experience</p>
+                                    <span class="date">Start of 2024</span>
+                                    <p>mobile developer with flutter and web developer using MERN technology</p>
                                 </li>
                             </ul>
                         </div>
@@ -197,6 +197,7 @@
                         <li>web development</li>
                         <li>mobile development</li>
                         <li>graphic design</li>
+                        <li>hosting services</li>
                     </ul>
                     <ul>
                         <li class="headul">Soft Skills</li>
@@ -210,13 +211,14 @@
                         <li>javascript</li>
                         <li>dart</li>
                         <li>flutter</li>
+                        <li>git & github</li>
                     </ul>
                 </div>
             </section>
         </div>
     </div>
 <script src="/js/firebase.js" type="module"></script>
-<script src="/js/script.js"></script>
+<script src="/js/script.js" type="module"></script>
 <script src="/js/functions.js"></script>
 </body>
 </html>
