--- a/index.html
+++ b/index.html
@@ -8,6 +8,47 @@
     <title>Mohamed Abd Elghany</title>
 </head>
 <body>
+    <div class="options_menu">
+        <ul>
+            <li><a href="#home" class="">
+                <i class="fa-solid fa-house"></i>
+                <span class="link-name">Home</span>
+            </a></li>
+            <li><a href="#projects" class="">
+                <i class="fa-solid fa-list-check"></i>
+                <span class="link-name">Projects</span>
+            </a></li>
+            <li><a href="#comments" class="">
+                <i class="fa-regular fa-comment-dots"></i>
+                <span class="link-name">Feedbacks</span>
+            </a></li>
+            <li><a href="#hireme" class="">
+                <i class="fa-brands fa-servicestack"></i>
+                <span class="link-name">Services</span>
+            </a></li>
+            <li><a href="#hireme" class="">
+                <i class="fa-solid fa-paper-plane"></i>
+                <span class="link-name">Hire me</span>
+            </a></li>
+            <li><a href="#" class="">
+                <i class="fa-solid fa-language"></i>
+                <span class="link-name">language (coming soon)</span>
+            </a></li>
+            <li class="mode">
+                <a href="#">
+                    <i class="uil uil-moon"></i>
+                    <span class="link-name">Dark Mode</span>
+                </a>
+                <div class="mode-toggle">
+                    <span class="switch"></span>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <div class="search_window hidden">
+        <i class="fa-regular fa-circle-xmark" id="close-win"></i>
+        <h2 style="color: aliceblue; position: absolute; top: 50%;left: 50%;">comming soon :)</h2>
+    </div>
     <div class="window hidden" id="window">
         <i class="fa-regular fa-circle-xmark" id="close-win"></i>
         <div class="win-content">
@@ -121,6 +162,27 @@
                         </div>
                     </div>
 
+                </div>
+            </section>
+            <section class="dash-achievments">
+                <h3>achievements</h3>
+                <div class="achievcards">
+                    <div class="achievcard">
+                        <span>projects</span>
+                        <span><i class="fa-solid fa-plus"></i> <span id="number1" metadata="docref1"></span></span>
+                    </div>
+                    <div class="achievcard">
+                        <span>feedbacks</span>
+                        <span><i class="fa-solid fa-plus"></i> <span id="number2" metadata="docref2"></span></span>
+                    </div>
+                    <div class="achievcard">
+                        <span>tasks</span>
+                        <span><i class="fa-solid fa-plus"></i> <span id="number3" metadata="docref3"></span></span>
+                    </div>
+                    <div class="achievcard">
+                        <span>experience years</span>
+                        <span>4</span>
+                    </div>
                 </div>
             </section>
             <section class="dash-maincontent">
