--- a/index.html
+++ b/index.html
@@ -272,7 +272,11 @@
                             </div>
                             <button id="submitcom">Send</button>
                         </div>
-                        <div class="right"></div>
+                        <div class="right">
+                            <i class="fa-solid fa-comments"></i>
+                            <i class="fa-regular fa-comment-dots"></i>
+                            <i class="fa-regular fa-comment-dots"></i>
+                        </div>
                     </div>
                 </div>
             </section>
