--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
     <div class="main-content">
         <nav>
             <div class="menu-items">
+                <div class="logo-image">
+                    <h1>MA</h1>       
+                </div>
                 <ul class="nav-links">
                     <li><a href="#home" class="">
                         <i class="fa-solid fa-house"></i>
@@ -122,7 +125,7 @@
         </nav>
         <div class="dashboard">
             <div class="top">
-                <h3><i class="fa-solid fa-bars" id="menuopen"></i> profile</h3>
+                <h3><i class="fa-solid fa-bars" id="menuopen"></i> Home > profile</h3>
                 <div class="search">
                     <div class="search-input">
                         <i class="fa-solid fa-magnifying-glass"></i>
@@ -133,14 +136,13 @@
                     </div>
                 </div>
             </div>
-            <section class="dash-content">
+            <section class="dash-content dash1">
                 <div class="intro section" id="home">
                     <div class="shape"></div>
                     <div class="image-con"></div>
                     <div class="head-title">
                         <h2>Hello, I'm </h2>
                         <span>Mohamed Abd Elghany</span>
-                        <a href="Mohamed Abd Elghany.pdf" download="cv.pdf">Download CV <i class="fa-solid fa-download"></i></a>
                     </div>
                     <div class="maininf">
                         <div class="textanime" id="textanime">
@@ -160,154 +162,163 @@
                             <a href="https://wa.me/+201007981850" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                             <a href="https://github.com/mohamedabdelgha" target="_blank"><i class="fa-brands fa-github"></i></a>
                         </div>
+                        <div class="buttons">
+                            <button id="hirebtn"><i class="fa-solid fa-paper-plane"></i> send message</button>
+                            <a href="Mohamed Abd Elghany.pdf" download="cv.pdf">Download CV <i class="fa-solid fa-download"></i></a>
+                        </div>
                     </div>
 
                 </div>
-            </section>
-            <section class="dash-achievments">
-                <h3>achievements</h3>
-                <div class="achievcards">
-                    <div class="achievcard">
-                        <span>projects</span>
-                        <span><i class="fa-solid fa-plus"></i> <span id="number1" metadata="docref1"></span></span>
+                <div class="footer">
+                    <div class="section" id="hireme">
+                        <i class="fa-brands fa-servicestack selected"></i>
+                        <i class="fa-solid fa-microchip"></i>
+                        <i class="fa-solid fa-trophy"></i>
                     </div>
-                    <div class="achievcard">
-                        <span>feedbacks</span>
-                        <span><i class="fa-solid fa-plus"></i> <span id="number2" metadata="docref2"></span></span>
+                    <div class="lists">
+                        <ul id="ui1">
+                            <li class="headul">Services</li>
+                            <li>web development</li>
+                            <li>mobile development</li>
+                            <li>graphic design</li>
+                            <li>hosting services</li>
+                        </ul>
+                        <ul class="hiddenUL">
+                            <li class="headul">Soft Skills</li>
+                            <li>problem solving</li>
+                            <li>communications</li>
+                            <li>teamwork</li>
+                            <li>discipline</li>
+                        </ul>
+                        <ul class="hiddenUL">
+                            <li class="headul">Hard Skills</li>
+                            <li>javascript</li>
+                            <li>dart</li>
+                            <li>flutter</li>
+                            <li>git & github</li>
+                        </ul>
                     </div>
-                    <div class="achievcard">
-                        <span>tasks</span>
-                        <span><i class="fa-solid fa-plus"></i> <span id="number3" metadata="docref3"></span></span>
-                    </div>
-                    <div class="achievcard">
-                        <span>experience years</span>
-                        <span>4</span>
-                    </div>
-                </div>
-            </section>
-            <section class="dash-maincontent">
-                <div class="rightcon section" id="projects">
-                    <h3>My Projects</h3>
-                    <div class="filters">
-                        <span metadata="All">All</span>
-                        <span metadata="Completed">Completed</span>
-                        <span metadata="In Progress">In Progress</span>
-                        <span metadata="Not Started">Not Started</span>
-                    </div>
-                    <div class="pro-cards">
-                        <h4>loading.................</h4>
-                    </div>
-                </div>
-                <div class="leftcon">
-                    <div class="div1">
-                        <h3>Certificates</h3>
-                        <div class="certificates">
-                            <ul>
-                                <li>
-                                    <span class="date">2024</span>
-                                    <p>IS degree</p>
-                                    <i class="fa-solid fa-certificate"></i>
-                                </li>
-                                <li>
-                                    <span class="date">2022</span>
-                                    <p>advanced full-stack diploma (MERN)</p>
-                                    <i class="fa-solid fa-certificate"></i>
-                                </li>
-                                <li>
-                                    <span class="date">2023</span>
-                                    <p>Flutter course</p>
-                                    <i class="fa-solid fa-certificate"></i>
-                                </li>
-                                <li>
-                                    <span class="date">2024</span>
-                                    <p>ITI diploma  (preparing)</p>
-                                    <i class="fa-solid fa-certificate"></i>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="div2">
-                        <h3>Experiences</h3>
-                        <div class="experiences">
-                            <ul>
-                                <li>
-                                    <span class="date">Start of 2022</span>
-                                    <p>CRUD system, built a system handles the stores requirements and ensure to store the data and doing some statistics to help the user mentaining daily operations</p>
-                                </li>
-                                <li>
-                                    <span class="date">Start of 2023</span>
-                                    <p>Freelancer in web development, built many web apps</p>
-                                </li>
-                                <li>
-                                    <span class="date">End of 2023</span>
-                                    <p>Freelancer as mobile developer, built many mobile apps</p>
-                                </li>
-                                <li>
-                                    <span class="date">Start of 2024</span>
-                                    <p>mobile developer with flutter and web developer using MERN technology</p>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="dash-comments section" id="comments">
-                <h3>Clients Feedback</h3>
-                <div class="comments">
-                    <h2>loading..................</h2>
-                </div>
-                <div class="leave-comment">
-                    <h3>Leave a Feedback</h3>
-                    <div class="comment-con">
-                        <div class="left">
-                            <input type="text" id="name" class="textarea" placeholder="Name...">
-                            <input type="text" id="Feedback" class="textarea" placeholder="feedback...">
-                            <div class="star-rating">
-                                <input type="radio" id="star5" name="rating" value="5"><label for="star5" title="5 stars"></label>
-                                <input type="radio" id="star4" name="rating" value="4"><label for="star4" title="4 stars"></label>
-                                <input type="radio" id="star3" name="rating" value="3"><label for="star3" title="3 stars"></label>
-                                <input type="radio" id="star2" name="rating" value="2"><label for="star2" title="2 stars"></label>
-                                <input type="radio" id="star1" name="rating" value="1"><label for="star1" title="1 star"></label>
-                                <span>rate me:</span>
-                            </div>
-                            <button id="submitcom">Send</button>
-                        </div>
-                        <div class="right">
-                            <i class="fa-solid fa-comments"></i>
-                            <i class="fa-regular fa-comment-dots"></i>
-                            <i class="fa-regular fa-comment-dots"></i>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="footer">
-                <div class="section" id="hireme">
-                    <h2>hope you liked my profile</h2>
                     <button id="hirebtn"><i class="fa-solid fa-paper-plane"></i> HIRE ME</button>
                 </div>
-                <div class="lists">
-                    <ul>
-                        <li class="headul">Services</li>
-                        <li>web development</li>
-                        <li>mobile development</li>
-                        <li>graphic design</li>
-                        <li>hosting services</li>
-                    </ul>
-                    <ul>
-                        <li class="headul">Soft Skills</li>
-                        <li>problem solving</li>
-                        <li>communications</li>
-                        <li>teamwork</li>
-                        <li>discipline</li>
-                    </ul>
-                    <ul>
-                        <li class="headul">Hard Skills</li>
-                        <li>javascript</li>
-                        <li>dart</li>
-                        <li>flutter</li>
-                        <li>git & github</li>
-                    </ul>
-                </div>
+            </section>
+            <section class="dash-content dash2">
+                <section class="dash-achievments">
+                    <h3>achievements</h3>
+                    <div class="achievcards">
+                        <div class="achievcard">
+                            <span>projects</span>
+                            <span><i class="fa-solid fa-plus"></i> <span id="number1" metadata="docref1"></span></span>
+                        </div>
+                        <div class="achievcard">
+                            <span>feedbacks</span>
+                            <span><i class="fa-solid fa-plus"></i> <span id="number2" metadata="docref2"></span></span>
+                        </div>
+                        <div class="achievcard">
+                            <span>tasks</span>
+                            <span><i class="fa-solid fa-plus"></i> <span id="number3" metadata="docref3"></span></span>
+                        </div>
+                        <div class="achievcard">
+                            <span>experience years</span>
+                            <span>4</span>
+                        </div>
+                    </div>
+                </section>
+                <section class="dash-maincontent">
+                    <div class="rightcon section" id="projects">
+                        <h3>My Projects</h3>
+                        <div class="filters">
+                            <span metadata="All">All</span>
+                            <span metadata="Completed"><i class="fa-solid fa-circle-check"></i> Completed</span>
+                            <span metadata="In Progress"><i class="fa-solid fa-spinner"></i> In Progress </span>
+                            <span metadata="Not Started"><i class="fa-solid fa-hourglass-end"></i> Not Started</span>
+                        </div>
+                        <div class="pro-cards">
+                            <h4>loading.................</h4>
+                        </div>
+                    </div>
+                    <div class="leftcon">
+                        <div class="div1">
+                            <h3>Certificates</h3>
+                            <div class="certificates">
+                                <ul>
+                                    <li>
+                                        <span class="date">2024</span>
+                                        <p>IS degree</p>
+                                        <i class="fa-solid fa-certificate"></i>
+                                    </li>
+                                    <li>
+                                        <span class="date">2022</span>
+                                        <p>advanced full-stack diploma (MERN)</p>
+                                        <i class="fa-solid fa-certificate"></i>
+                                    </li>
+                                    <li>
+                                        <span class="date">2023</span>
+                                        <p>Flutter course</p>
+                                        <i class="fa-solid fa-certificate"></i>
+                                    </li>
+                                    <li>
+                                        <span class="date">2024</span>
+                                        <p>ITI diploma  (preparing)</p>
+                                        <i class="fa-solid fa-certificate"></i>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="div2">
+                            <h3>Experiences</h3>
+                            <div class="experiences">
+                                <ul>
+                                    <li>
+                                        <span class="date">Start of 2022</span>
+                                        <p>CRUD system, built a system handles the stores requirements and ensure to store the data and doing some statistics to help the user mentaining daily operations</p>
+                                    </li>
+                                    <li>
+                                        <span class="date">Start of 2023</span>
+                                        <p>Freelancer in web development, built many web apps</p>
+                                    </li>
+                                    <li>
+                                        <span class="date">End of 2023</span>
+                                        <p>Freelancer as mobile developer, built many mobile apps</p>
+                                    </li>
+                                    <li>
+                                        <span class="date">Start of 2024</span>
+                                        <p>mobile developer with flutter and web developer using MERN technology</p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="dash-comments section" id="comments">
+                    <h3>Clients Feedback</h3>
+                    <div class="comments">
+                        <h2>loading..................</h2>
+                    </div>
+                    <div class="leave-comment">
+                        <h3>Leave a Feedback</h3>
+                        <div class="comment-con">
+                            <div class="left">
+                                <input type="text" id="name" class="textarea" placeholder="Name...">
+                                <input type="text" id="Feedback" class="textarea" placeholder="feedback...">
+                                <div class="star-rating">
+                                    <input type="radio" id="star5" name="rating" value="5"><label for="star5" title="5 stars"></label>
+                                    <input type="radio" id="star4" name="rating" value="4"><label for="star4" title="4 stars"></label>
+                                    <input type="radio" id="star3" name="rating" value="3"><label for="star3" title="3 stars"></label>
+                                    <input type="radio" id="star2" name="rating" value="2"><label for="star2" title="2 stars"></label>
+                                    <input type="radio" id="star1" name="rating" value="1"><label for="star1" title="1 star"></label>
+                                    <span>rate me:</span>
+                                </div>
+                                <button id="submitcom">Send</button>
+                            </div>
+                            <div class="right">
+                                <i class="fa-solid fa-comments"></i>
+                                <i class="fa-regular fa-comment-dots"></i>
+                                <i class="fa-regular fa-comment-dots"></i>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                
             </section>
         </div>
     </div>
